Maybe it's workng this time?

--- a/process_events.ipynb
+++ b/process_events.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -19,19 +19,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ok\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# runs in about 4m 30s\n",
     "with open('events.json','r') as f:\n",
@@ -41,20 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "152,259 games found\n",
-      "14,946,418 events found\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# runs in a few seconds\n",
     "nEvents = 0\n",
@@ -74,93 +57,65 @@
    },
    "outputs": [],
    "source": [
-    "#from datetime import datetime\n",
+    "#firstyear = 2016\n",
+    "#lastyear = 2016\n",
+    "#theseyears = range(firstyear,lastyear+1)\n",
     "\n",
-    "df[pandas.to_datetime(df.index.str.slice(3,7)).year == 1921]  # extract year from id\n",
-    "#g = lambda x: str(x)\n",
-    "#len(allgameids)\n",
-    "\n",
-    "#df[df.index == 'BRO192104170']\n",
-    "#infos = df['info']\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing events for the year 1921...\n",
-      "Processing events for the year 1922...\n",
-      "Processing events for the year 1923...\n",
-      "Processing events for the year 1924...\n",
-      "Processing events for the year 1925...\n",
-      "Processing events for the year 1926...\n",
-      "Processing events for the year 1927...\n",
-      "Processing events for the year 1928...\n",
-      "Processing events for the year 1929...\n",
-      "Processing events for the year 1930...\n",
-      "Processing events for the year 1931...\n",
-      "Processing events for the year 1932...\n",
-      "Processing events for the year 1933...\n",
-      "Processing events for the year 1934...\n",
-      "Processing events for the year 1935...\n",
-      "Processing events for the year 1936...\n",
-      "Processing events for the year 1937...\n",
-      "Processing events for the year 1938...\n",
-      "Processing events for the year 1939...\n",
-      "Processing events for the year 1940...\n",
-      "saved\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(14563, 12)"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# for 1921-1940, runs in < 12 min\n",
-    "# for 1921-1950, runs in < 12 min\n",
-    "\n",
-    "\n",
-    "firstyear = 1941\n",
-    "lastyear = 1950\n",
-    "\n",
-    "theseyears = range(firstyear,lastyear+1)\n",
-    "#dfx = df[pandas.to_datetime(df.index.str.slice(3,7)).year == theseyears[0]]\n",
-    "#for k in range(0,len(theseyears)):\n",
-    "#    thisyear_df = pandas.concat((dfx,df[pandas.to_datetime(df.index.str.slice(3,7)).year == theseyears[k]]))\n",
-    "\n",
-    "#dfx.shape\n",
-    "#dfx\n",
     "column_list = ['event_in_game', 'event_type', 'inning', 'visitor_or_home']#,'retrosheet_id']\n",
     "column_list += ['batter_id', 'pitch_count', 'pitch_list']\n",
     "column_list += ['event', 'comment', 'sub_batting_order', 'sub_position']\n",
     "column_list += ['gameID']\n",
     "\n",
+    "events_df = pandas.DataFrame(columns=column_list)\n",
     "\n",
+    "#for thisoneyear in theseyears:\n",
+    "#    print('Processing events for the year {0:.0f}...'.format(thisoneyear))\n",
+    "    \n",
+    "    \n",
+    "#print(len(df))    # 152259\n",
+    "dfx = df.iloc[0:100]\n",
+    "\n",
+    "i = 0\n",
+    "for index, thisgame in dfx.iterrows():\n",
+    "    for thisevent in thisgame['events']:\n",
+    "        if (np.mod(i,1000) == 0):\n",
+    "            print('Processing event {0:,.0f}...'.format(i))\n",
+    "        thisevent.append(index)\n",
+    "        events_df.loc[i] = thisevent\n",
+    "        i = i + 1\n",
+    "print('Done')\n",
+    "events_df['event_in_game'] = events_df['event_in_game'].apply(lambda x: int(x))\n",
+    "events_df = events_df.sort_values(['gameID','event_in_game'])\n",
+    "events_df.reset_index(drop=True)\n",
+    "#events_df = events_df.drop('index')\n",
+    "events_df.index.name = 'eventID'\n",
+    "events_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "firstyear = 2016\n",
+    "lastyear = 2016\n",
+    "theseyears = range(firstyear,lastyear+1)\n",
+    "\n",
+    "column_list = ['event_in_game', 'event_type', 'inning', 'visitor_or_home']#,'retrosheet_id']\n",
+    "column_list += ['batter_id', 'pitch_count', 'pitch_list']\n",
+    "column_list += ['event', 'comment', 'sub_batting_order', 'sub_position']\n",
+    "column_list += ['gameID']\n",
     "\n",
     "events_df = pandas.DataFrame(columns=column_list)\n",
-    "#print(events_df.shape)\n",
     "i = 0\n",
     "for thisoneyear in theseyears:\n",
     "    print('Processing events for the year {0:.0f}...'.format(thisoneyear))\n",
     "    dfx = df[pandas.to_datetime(df.index.str.slice(3,7)).year == thisoneyear]\n",
     "\n",
     "    for index, row in dfx.iterrows():\n",
-    "    ##    if (np.mod(i,100000) == 0):\n",
-    "    ##    print(i,index)\n",
     "        thisrow = []\n",
     "        for j in range(0,len(row['events'])):\n",
     "            thisrow = row['events'][j]\n",
@@ -169,15 +124,51 @@
     "        events_df.loc[i] = thisrow\n",
     "        i = i + 1\n",
     "\n",
-    "filename = 'events' + str(firstyear) + '-' + str(lastyear) + '.csv'\n",
-    "events_df.index.name = 'eventID'\n",
-    "\n",
-    "events_df.to_csv(filename)\n",
-    "print('saved to'+filename)        \n",
-    "\n",
-    "\n",
-    "events_df.shape"
+    "#filename = 'events' + str(firstyear) + '-' + str(lastyear) + '.csv'\n",
+    "#events_df.index.name = 'eventID'\n",
+    "#events_df.to_csv(filename)\n",
+    "#print('Saved to: '+filename)        \n",
+    "#events_df.shape\n",
+    "print('done')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# for 1981-1990, runs in < 22 min and returns 20,337 events written to events1981-1990.csv\n",
+    "events_df_backup = events_df\n",
+    "#events_df = events_df_backup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "events_df = events_df_backup\n",
+    "events_df['event_in_game'] = events_df['event_in_game'].apply(lambda x: int(x))\n",
+    "events_df = events_df.sort_values('event_in_game')\n",
+    "#events_df = events_df.sort_values(['gameID', 'event_in_game'], ascending=[True, True])\n",
+    "events_df.head(10)\n",
+    "#events_df['event_in_game'].dtype\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
