Removal of non-play, non-sub columns completed

--- a/process_events_try2.ipynb
+++ b/process_events_try2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,10 +23,12 @@
    },
    "outputs": [],
    "source": [
-    "with open('events1927and1938.json','r') as f:\n",
+    "# runs in about 5 minutes\n",
+    "with open('events_raw.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
-    "#pprint(allgames[2])   "
+    "#pprint(allgames[2])   \n",
+    "allgames_bk = allgames"
    ]
   },
   {
@@ -43,17 +45,11 @@
     "for i in range(0,len(allgames)):\n",
     "    thisgamedict = allgames[i]\n",
     "    thisgameevents_df = pandas.DataFrame(thisgamedict['events'], columns=column_list)\n",
-    "#    print('before: ',len(thisgameevents_df))\n",
-    "    j = 0# len(thisgameevents_df) - 1\n",
-    "    while True:\n",
-    "        \n",
-    "        if (j >= len(thisgameevents_df) - 1): #(j < 0):\n",
-    "            break      \n",
+    "    if (numpy.mod(i,10000) == 0):\n",
+    "        print(i)\n",
+    "    for j in range(0,len(thisgameevents_df) - 1):\n",
     "        if (thisgameevents_df.iloc[j-1]['event_type'] not in ('play','sub')):\n",
     "            thisgameevents_df.iloc[j]['comment'] = thisgameevents_df.iloc[j-1]['comment'] + ' ' + thisgameevents_df.iloc[j]['comment']\n",
-    "            \n",
-    "        j = j + 1\n",
-    "#    print(thisgameevents_df[(thisgameevents_df['event_type'] != 'play') & (thisgameevents_df['event_type'] != 'sub')])\n",
     "    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
     "    thisgameevents_df = thisgameevents_df.drop('event_in_game',axis=1)\n",
     "    thisgameevents_df = thisgameevents_df.reset_index(drop=True)\n",
