--- a/process_events_try2.ipynb
+++ b/process_events_try2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -24,11 +24,22 @@
    "outputs": [],
    "source": [
     "# runs in about 5 minutes\n",
-    "with open('events_raw.json','r') as f:\n",
+    "with open('events_raw_2012-2016.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "#pprint(allgames[2])   \n",
     "allgames_bk = allgames"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "allgames = allgames_bk "
    ]
   },
   {
@@ -45,10 +56,22 @@
     "for i in range(0,len(allgames)):\n",
     "    thisgamedict = allgames[i]\n",
     "    thisgameevents_df = pandas.DataFrame(thisgamedict['events'], columns=column_list)\n",
-    "    if (numpy.mod(i,10000) == 0):\n",
-    "        print(i)\n",
+    "    \n",
+    "    # replace event types with number codes for fastness\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'play'),0,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'sub'),1,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'com'),2,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'badj'),3,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'padj'),4,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'badj'),5,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = pandas.to_numeric(thisgameevents_df['event_type'])\n",
+    "    \n",
+    "    if (numpy.mod(i,1000) == 0):\n",
+    "        print('processing game {0:,.0f}...'.format(i))\n",
     "    for j in range(0,len(thisgameevents_df) - 1):\n",
+    "\n",
     "        if (thisgameevents_df.iloc[j-1]['event_type'] not in ('play','sub')):\n",
+    "#        if (thisgameevents_df.iloc[j-1]['event_type'] not in (0,1)):\n",
     "            thisgameevents_df.iloc[j]['comment'] = thisgameevents_df.iloc[j-1]['comment'] + ' ' + thisgameevents_df.iloc[j]['comment']\n",
     "    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
     "    thisgameevents_df = thisgameevents_df.drop('event_in_game',axis=1)\n",
@@ -66,7 +89,11 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('events_1927_1938.json','w') as f:\n",
+    "    json.dump(allgames, f)\n",
+    "print('done')"
+   ]
   },
   {
    "cell_type": "code",
