Game info and starters parsed

--- a/process_events_try2.ipynb
+++ b/process_events_try2.ipynb
@@ -24,7 +24,7 @@
    "outputs": [],
    "source": [
     "# runs in about 5 minutes\n",
-    "with open('events_raw_2012-2016.json','r') as f:\n",
+    "with open('events_raw_1927_1938.json','r') as f:\n",
     "    allgames = json.load(f)\n",
     "print('ok')\n",
     "#pprint(allgames[2])   \n",
@@ -56,22 +56,13 @@
     "for i in range(0,len(allgames)):\n",
     "    thisgamedict = allgames[i]\n",
     "    thisgameevents_df = pandas.DataFrame(thisgamedict['events'], columns=column_list)\n",
-    "    \n",
-    "    # replace event types with number codes for fastness\n",
-    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'play'),0,(thisgameevents_df['event_type']))\n",
-    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'sub'),1,(thisgameevents_df['event_type']))\n",
-    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'com'),2,(thisgameevents_df['event_type']))\n",
-    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'badj'),3,(thisgameevents_df['event_type']))\n",
-    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'padj'),4,(thisgameevents_df['event_type']))\n",
-    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'badj'),5,(thisgameevents_df['event_type']))\n",
-    "#    thisgameevents_df['event_type'] = pandas.to_numeric(thisgameevents_df['event_type'])\n",
-    "    \n",
-    "    if (numpy.mod(i,1000) == 0):\n",
+    "    inning = 1\n",
+    "    if (numpy.mod(i,100) == 0):\n",
     "        print('processing game {0:,.0f}...'.format(i))\n",
-    "    for j in range(0,len(thisgameevents_df) - 1):\n",
-    "\n",
+    "    for j in range(0,len(thisgameevents_df)): #- 1):\n",
+    "        if (thisgameevents_df.iloc[j]['event_type'] != 'play'):\n",
+    "            thisgameevents_df.iloc[j]['inning'] = thisgameevents_df.iloc[j-1]['inning']\n",
     "        if (thisgameevents_df.iloc[j-1]['event_type'] not in ('play','sub')):\n",
-    "#        if (thisgameevents_df.iloc[j-1]['event_type'] not in (0,1)):\n",
     "            thisgameevents_df.iloc[j]['comment'] = thisgameevents_df.iloc[j-1]['comment'] + ' ' + thisgameevents_df.iloc[j]['comment']\n",
     "    thisgameevents_df = thisgameevents_df[(thisgameevents_df['event_type'] == 'play') | (thisgameevents_df['event_type'] == 'sub')]\n",
     "    thisgameevents_df = thisgameevents_df.drop('event_in_game',axis=1)\n",
@@ -79,7 +70,20 @@
     "    thisgameevents_df.index.name = 'event_in_game'\n",
     "    allgames[i]['events'] = thisgameevents_df.reset_index().values.tolist()\n",
     "\n",
-    "print('done')"
+    "print('done')\n",
+    "thisgameevents_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "thisgameevents_df[thisgameevents_df['comment'] != '']"
    ]
   },
   {
@@ -102,7 +106,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "    # replace event types with number codes for fastness\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'play'),0,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'sub'),1,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'com'),2,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'badj'),3,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'padj'),4,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = numpy.where((thisgameevents_df['event_type'] == 'badj'),5,(thisgameevents_df['event_type']))\n",
+    "#    thisgameevents_df['event_type'] = pandas.to_numeric(thisgameevents_df['event_type'])\n",
+    "    \n"
+   ]
   }
  ],
  "metadata": {
