Fixed rosters so Hank Aaron is included
I needed to specify header=0 in read_csv

--- a/get_rosters.ipynb
+++ b/get_rosters.ipynb
@@ -2,22 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/home/idies/workspace/persistent/sportsball'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -27,19 +16,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "files identified\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "os.chdir('retrosheet/')\n",
     "filelist = []\n",
@@ -56,43 +37,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Done\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#for thisfile in filelist[0]:\n",
-    "#    df = pandas.DataFrame.from_csv(thisfile)\n",
-    "colnames = ['nameLast', 'nameFirst', 'batting_hand', 'throwing_hand', 'teamID', 'position', 'year']\n",
+    "colnames = ['playerID', 'nameLast', 'nameFirst', 'batting_hand', 'throwing_hand', 'team', 'position', 'year']\n",
+    "#filename = 'retrosheet/MLN1954.ROS'\n",
     "\n",
     "roster_df = pandas.DataFrame(columns=colnames)\n",
-    "\n",
-    "prefix = 'retrosheet/'\n",
-    "suffix = '.ROS'\n",
-    "\n",
+    "roster_df = roster_df.set_index('playerID')\n",
     "for filename in filelist:\n",
-    "    thisteam = str(filename).split('/')[1].split('.')[0][0:3]\n",
     "    thisyear = str(filename).split('/')[1].split('.')[0][3:7]\n",
-    "    this_roster_df = pandas.DataFrame.from_csv(prefix+thisteam+thisyear+suffix)#, columns=colnames)\n",
-    "    this_roster_df['year'] = pandas.to_numeric(thisyear, errors='coerce')\n",
-    "    this_roster_df.columns = colnames\n",
-    "    roster_df = pandas.concat((roster_df, this_roster_df), axis=0)\n",
-    "roster_df.index.name = 'playerID'\n",
+    "    this_roster_df = pandas.read_csv(filename, names=colnames, header=None)\n",
+    "    this_roster_df = this_roster_df.set_index('playerID')\n",
+    "    this_roster_df['year'] = thisyear\n",
+    "    roster_df = pandas.concat((roster_df, this_roster_df))\n",
     "\n",
-    "new_column_order = ['nameLast', 'nameFirst', 'teamID', 'year', 'batting_hand', 'throwing_hand', 'position']\n",
+    "new_column_order = ['nameLast', 'nameFirst', 'batting_hand', 'throwing_hand', 'position', 'team', 'year']\n",
     "roster_df = roster_df[new_column_order]\n",
-    "roster_df = roster_df.sort_values('year').sort_values('teamID').sort_index()\n",
-    "roster_df.to_csv('fullroster.csv', encoding='utf-8')\n",
-    "print('Done')"
+    "roster_df['year'] = pandas.to_numeric(roster_df['year'], errors='coerce')\n",
+    "roster_df = roster_df.sort_values('team').sort_values('year').sort_index()\n",
+    "\n",
+    "#roster_df.to_csv('fullroster.csv', encoding='utf-8')\n",
+    "print('Done')\n",
+    "roster_df"
    ]
   },
   {
@@ -102,7 +72,9 @@
     "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "roster_df"
+   ]
   },
   {
    "cell_type": "code",
