Full roster script and data

--- a/get_rosters.ipynb
+++ b/get_rosters.ipynb
@@ -2,11 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'/home/idies/workspace/persistent/sportsball'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import os\n",
     "import numpy as np\n",
@@ -16,11 +27,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "files identified\n"
+     ]
+    }
+   ],
    "source": [
     "os.chdir('retrosheet/')\n",
     "filelist = []\n",
@@ -37,11 +56,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done\n"
+     ]
+    }
+   ],
    "source": [
     "colnames = ['playerID', 'nameLast', 'nameFirst', 'batting_hand', 'throwing_hand', 'team', 'position', 'year']\n",
     "#filename = 'retrosheet/MLN1954.ROS'\n",
@@ -60,20 +87,9 @@
     "roster_df['year'] = pandas.to_numeric(roster_df['year'], errors='coerce')\n",
     "roster_df = roster_df.sort_values('team').sort_values('year').sort_index()\n",
     "\n",
-    "#roster_df.to_csv('fullroster.csv', encoding='utf-8')\n",
+    "roster_df.to_csv('fullroster.csv', encoding='utf-8')\n",
     "print('Done')\n",
-    "roster_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "roster_df"
+    "#roster_df"
    ]
   },
   {
