Added code to select certain games for added speed
(currently commented out)

--- a/unpack_events.ipynb
+++ b/unpack_events.ipynb
@@ -56,9 +56,23 @@
    "outputs": [],
    "source": [
     "#allgames_df.sample(10).index\n",
-    "#'MIN201204230', 'SEA201207290', 'LAN201304280', 'OAK201309010',\n",
-    "#       'SFN201409270', 'DET201306090', 'TEX201208240', 'ANA201404280',\n",
-    "#       'WAS201304260', 'CIN201609060'],"
+    "#mygames = ['NYN201204100', 'BAL201208060', 'SEA201208150', 'BAL201208300', 'BAL201209300', 'BAL201304210']\n",
+    "#mygames += ['BAL201305170', 'BAL201405010', 'BAL201406130', 'BAL201406250', 'MIA201407030', 'PIT201605180']\n",
+    "#mygames += ['SDN201606150', 'WAS201607200', 'BAL201608180']\n",
+    "\n",
+    "#weird_game_ids = ['CLE192708190', 'BOS193008310', 'BOS193107250', 'CHA193304220', 'NYA193606030', 'MLN195505152']\n",
+    "#weird_game_ids += ['MIN196907170', 'NYN197208160', 'KCA201109150', 'TOR201208130', 'KCA201605310']\n",
+    "\n",
+    "#somecolumns = allgames_df.columns\n",
+    "#allgames2_df = pandas.DataFrame(columns=somecolumns)\n",
+    "#allgames2_df['id'] = ''\n",
+    "#allgames2_df = allgames2_df.set_index('id')\n",
+    "#allgames2_df\n",
+    "#for thisid, thisrow in allgames_df.iterrows():\n",
+    "#    if (thisid in mygames):\n",
+    "#        allgames2_df = allgames2_df.append(thisrow)\n",
+    "#allgames_df = allgames2_df\n",
+    "#print('done')"
    ]
   },
   {
@@ -70,13 +84,17 @@
    },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "column_list = ['event_in_game', 'event_type', 'inning', 'home_or_visitor', 'batterID']\n",
     "column_list += ['pitch_count', 'pitch_sequence', 'event', 'comment', 'sub_batting_order', 'sub_position']\n",
     "\n",
     "allevents_df = pandas.DataFrame(columns = column_list)\n",
     "\n",
     "cnt = 0\n",
-    "for thisgameID,row in allgames_df.head(200).iterrows():\n",
+    "\n",
+    "\n",
+    "for thisgameID,row in allgames_df.iterrows():\n",
     "    if (numpy.mod(cnt,100) == 0):\n",
     "        print('Parsing game {0:,.0f}: {1}'.format(cnt, thisgameID))\n",
     "    thisgame_df = pandas.DataFrame(row['events'], columns=column_list)\n",
@@ -92,6 +110,7 @@
     "    \n",
     "    cnt = cnt + 1\n",
     "\n",
+    "allevents_df = allevents_df.reset_index(drop=True)\n",
     "allevents_df.index.name = 'eventID'\n",
     "\n",
     "write_columns = ['gameID']\n",
@@ -102,10 +121,9 @@
     "\n",
     "allevents_df = allevents_df[write_columns]\n",
     "\n",
-    "allevents_df.to_csv('events_parsed_2012-2016.csv', encoding='utf-8')\n",
+    "allevents_df.to_csv('events_parsed_me.csv', encoding='utf-8')\n",
     "print('Done')\n",
-    "\n",
-    "#allevents_df.to_csv('events_2012-2016_parsed.csv')"
+    "#allevents_df"
    ]
   },
   {
