--- a/mess_with_events_from_json.ipynb
+++ b/mess_with_events_from_json.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -228,6 +228,7 @@
     "    return thisevent\n",
     "\n",
     "def advance_runners(evnt, basers, oots, scr, teem):\n",
+    "    \n",
     "    if (evnt['play'][0] in ('S', 'W', 'I')):\n",
     "        basers[0] = evnt['batterID']\n",
     "    elif (evnt['play'][0] == 'D'):\n",
@@ -237,7 +238,9 @@
     "    elif (evnt['play'][0] == 'H'):\n",
     "        if (evnt['play'][1] == 'R'):\n",
     "            print('HR')\n",
-    "#            basers = ['', '', '']\n",
+    "            print(basers)\n",
+    "            scr[teem] = sum((x != '') for x in basers) + 1  # all on base score, so does batter\n",
+    "            basers = ['', '', '']   # and the bases are empty again\n",
     "        elif (evnt['play'][1] == 'P'):\n",
     "            basers[0] = evnt['batterID']\n",
     "        else:\n",
@@ -246,7 +249,7 @@
     "        print('wtf')\n",
     "    print(evnt['play'][0])\n",
     "    print('on base: ',basers)\n",
-    "#    print('baserunning info: ',br)\n",
+    "    print('baserunning info: ',evnt['baserunning'])\n",
     "#    print('score: ', sc)\n",
     "    return ''\n",
     "print('done')"
@@ -254,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -269,18 +272,24 @@
       "Side:  1\n",
       "S\n",
       "on base:  ['markn001', '', '']\n",
+      "baserunning info:  \n",
       "D\n",
       "on base:  ['markn001', 'jonea003', '']\n",
+      "baserunning info:  1-3\n",
       "Inning  2\n",
       "Side:  0\n",
       "Side:  1\n",
       "S\n",
       "on base:  ['fordl001', '', '']\n",
+      "baserunning info:  \n",
       "D\n",
       "on base:  ['fordl001', 'reynm001', '']\n",
+      "baserunning info:  1-H\n",
       "HR\n",
+      "['fordl001', 'reynm001', '']\n",
       "H\n",
-      "on base:  ['fordl001', 'reynm001', '']\n",
+      "on base:  ['', '', '']\n",
+      "baserunning info:  2-H\n",
       "Inning  3\n",
       "Side:  0\n",
       "Side:  1\n",
@@ -288,45 +297,57 @@
       "Side:  0\n",
       "W\n",
       "on base:  ['saunm001', '', '']\n",
+      "baserunning info:  \n",
       "Side:  1\n",
       "S\n",
       "on base:  ['reynm001', '', '']\n",
+      "baserunning info:  \n",
       "Inning  5\n",
       "Side:  0\n",
       "S\n",
       "on base:  ['carpm001', '', '']\n",
+      "baserunning info:  \n",
       "Side:  1\n",
       "Inning  6\n",
       "Side:  0\n",
       "S\n",
       "on base:  ['kawam001', '', '']\n",
+      "baserunning info:  B-2(E4/TH1)\n",
       "Side:  1\n",
       "Inning  7\n",
       "Side:  0\n",
       "S\n",
       "on base:  ['jasoj001', '', '']\n",
+      "baserunning info:  \n",
       "Side:  1\n",
       "D\n",
       "on base:  ['', 'reynm001', '']\n",
+      "baserunning info:  \n",
       "Inning  8\n",
       "Side:  0\n",
       "D\n",
       "on base:  ['', 'thame001', '']\n",
+      "baserunning info:  \n",
       "S\n",
       "on base:  ['kawam001', 'thame001', '']\n",
+      "baserunning info:  2-H;BX2(836)\n",
       "W\n",
       "on base:  ['ackld001', 'thame001', '']\n",
+      "baserunning info:  \n",
       "Side:  1\n",
       "D\n",
       "on base:  ['', 'hardj003', '']\n",
+      "baserunning info:  \n",
       "Inning  9\n",
       "Side:  0\n",
       "S\n",
       "on base:  ['seagk001', '', '']\n",
+      "baserunning info:  \n",
       "S\n",
       "on base:  ['wellc001', '', '']\n",
+      "baserunning info:  2-3\n",
       "Side:  1\n",
-      "[0, 0]\n"
+      "[0, 3]\n"
      ]
     }
    ],
